[package]
name = "lrucache"
version = "0.1.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
clap = "3.0.0-beta.2"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
linked-hash-map = "0.5.3"
bytes = "0.5.6"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.13"
thiserror = "1.0.21"
anyhow = "1.0.33"
num_cpus = "1.13.0"
dashmap = "3.11.10"
memchr = "2.3.3"

[dev-dependencies]
tempfile = "3.1.0"
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "0.2.22", features = ["test-util"] }

[[bin]]
name = "cache_server"
path = "src/bin/server.rs"
